# LearningV8

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/: libchrome_zlib.dylib  libcppgc.dylib  libgmock.1.12.1.dylib  libgmock.dylib  libgmock_main.1.12.1.dylib  libgmock_main.dylib  libgtest.1.12.1.dylib  libgtest.dylib  libgtest_main.1.12.1.dylib  libgtest_main.dylib  libv8_cppgc_shared_for_testing.dylib  libv8_libbase.dylib  libv8_libplatform.dylib
src/: function_template_test.cpp  object_slot_test.cpp  object_test.cpp
src/common/: v8_test_fixture.h
